force-app/main/default/objects/FS_SP_Aligned_Zip__c/FS_SP_Aligned_Zip__c.object-meta.xml
<CustomObject>
    <description>Establishes the default Service Provider for a given Zip Code. Every record is a Zip Code (unique), and each one aligns to a Service Provider account via lookup.</description>
    <label>SP Aligned Zip</label>
    <nameField>
        <displayFormat>SPZ-{000000}</displayFormat>
        <label>SP Aligned Zip</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SP Aligned Zips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>