force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/Dispenser_Type__c.field-meta.xml
<CustomField>
    <fullName>Dispenser_Type__c</fullName>
    <formula>IF (ISPICKVAL( FS_Platform_Type__c, &quot;6000&quot;), &quot;6000&quot;, 

IF (ISPICKVAL( FS_Platform_Type__c, &quot;6050&quot;), &quot;6050&quot;,

IF (ISPICKVAL( FS_Platform_Type__c, &quot;7000&quot;), &quot;7000&quot;, 

IF (ISPICKVAL( FS_Platform_Type__c, &quot;7100&quot;), &quot;7100&quot;, 

IF (ISPICKVAL( FS_Platform_Type__c, &quot;8000&quot;), &quot;8000&quot;,

IF (ISPICKVAL( FS_Platform_Type__c, &quot;9000&quot;), &quot;9000&quot;,

IF (ISPICKVAL( FS_Platform_Type__c, &quot;9100&quot;), &quot;9100&quot; , null)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispenser Type</label>
    <type>Text</type>
</CustomField>