force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/DMA__c.field-meta.xml
<CustomField>
    <fullName>DMA__c</fullName>
    <description>NIELSEN DMAÃ¢â‚¬ï¿½?DESIGNATED MARKET AREA</description>
    <inlineHelpText>NIELSEN DMAÃ¢â‚¬ï¿½?DESIGNATED MARKET AREA</inlineHelpText>
    <label>DMA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>