force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/FS_Market__c.field-meta.xml
<CustomField>
    <fullName>FS_Market__c</fullName>
    <label>Market</label>
    <length>80</length>
    <type>Text</type>
</CustomField>