force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/FS_Market_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Market_Activation_Date__c</fullName>
    <label>Gulfstream Activation Date</label>
    <type>Date</type>
</CustomField>