force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/FS_Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform_Type__c</fullName>
    <label>Platform Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Types</valueSetName>
    </valueSet>
</CustomField>