force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/FS_Recommended_Branch__c.field-meta.xml
<CustomField>
    <fullName>FS_Recommended_Branch__c</fullName>
    <label>Recommended Branch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>