force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/FS_Selling_Activity_Market__c.field-meta.xml
<CustomField>
    <fullName>FS_Selling_Activity_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selling Activity Market</label>
    <referenceTo>Selling_Activity_Market__c</referenceTo>
    <relationshipLabel>SP Aligned Zips</relationshipLabel>
    <relationshipName>SP_Aligned_Zips</relationshipName>
    <type>Lookup</type>
</CustomField>