force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/FS_Selling_Market_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Selling_Market_Activation_Date__c</fullName>
    <formula>FS_Selling_Activity_Market__r.Market_Activation_Date__c</formula>
    <label>Market Activation Date</label>
    <type>Date</type>
</CustomField>