force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/FS_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>FS_Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The lookup account must be of the &quot;FS Service Provider&quot; recordtype</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Service Provider</value>
        </filterItems>
        <infoMessage>Select the Service Provider account that should be linked to the zip code.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SP Aligned Zips</relationshipLabel>
    <relationshipName>SP_Aligned_Zips</relationshipName>
    <type>Lookup</type>
</CustomField>