force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/FS_SP_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Name__c</fullName>
    <formula>FS_Service_Provider__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP Name</label>
    <type>Text</type>
</CustomField>