force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/FS_Transit_Days_from_18106__c.field-meta.xml
<CustomField>
    <fullName>FS_Transit_Days_from_18106__c</fullName>
    <label>Transit Days from 18106</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>