force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/FS_Transit_Days_from_30354__c.field-meta.xml
<CustomField>
    <fullName>FS_Transit_Days_from_30354__c</fullName>
    <label>Transit Days from 30354</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>