force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/FS_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Zip_Code__c</fullName>
    <description>The 5-char Zip Code, including leading zeroes</description>
    <externalId>true</externalId>
    <inlineHelpText>Zip Code must be exactly 5 digits, include leading zeroes.</inlineHelpText>
    <label>Zip Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>