force-app/main/default/objects/FS_SP_Aligned_Zip__c/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <description>Used during migration, hold Object ID in source system.</description>
    <label>Migration_ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>