force-app/main/default/objects/FS_SP_Aligned_Zip__c/recordTypes/FS_SP_Aligned_Zip.recordType-meta.xml
<RecordType>
    <fullName>FS_SP_Aligned_Zip</fullName>
    <active>true</active>
    <label>SP Aligned Zip</label>
</RecordType>