force-app/main/default/objects/FS_SP_Aligned_Zip__c/listViews/Chino_Vistar.listView-meta.xml
<ListView>
    <fullName>Chino_Vistar</fullName>
    <columns>NAME</columns>
    <columns>FS_Zip_Code__c</columns>
    <columns>FS_Service_Provider__c</columns>
    <columns>FS_SP_Code__c</columns>
    <columns>FS_SP_Name__c</columns>
    <columns>FS_Market__c</columns>
    <columns>FS_Market_Activation_Date__c</columns>
    <columns>FS_Recommended_Branch__c</columns>
    <columns>FS_Transit_Days_from_18106__c</columns>
    <columns>FS_Transit_Days_from_30354__c</columns>
    <columns>FS_Transit_Days_from_92879__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FS_Zip_Code__c</field>
        <operation>equals</operation>
        <value>75082</value>
    </filters>
    <label>Muskogee CCBC</label>
</ListView>