force-app/main/default/objects/FS_SP_Aligned_Zip__c/listViews/Hawaii.listView-meta.xml
<ListView>
    <fullName>Hawaii</fullName>
    <columns>NAME</columns>
    <columns>FS_Zip_Code__c</columns>
    <columns>FS_SP_Code__c</columns>
    <columns>FS_SP_Name__c</columns>
    <columns>FS_Market__c</columns>
    <columns>FS_Market_Activation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FS_Market__c</field>
        <operation>equals</operation>
        <value>Hawaii - Oahu</value>
    </filters>
    <label>Hawaii</label>
</ListView>