force-app/main/default/objects/FS_SP_Aligned_Zip__c/listViews/Search_By_Zip.listView-meta.xml
<ListView>
    <fullName>Search_By_Zip</fullName>
    <columns>NAME</columns>
    <columns>FS_Zip_Code__c</columns>
    <columns>FS_Platform_Type__c</columns>
    <columns>FS_SP_Code__c</columns>
    <columns>FS_Service_Provider__c</columns>
    <columns>FS_Market__c</columns>
    <columns>FS_Market_Activation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FS_Zip_Code__c</field>
        <operation>equals</operation>
        <value>07066</value>
    </filters>
    <label>Search By Zip</label>
</ListView>