force-app/main/default/objects/FS_SP_Aligned_Zip__c/listViews/Zips_with_no_SP.listView-meta.xml
<ListView>
    <fullName>Zips_with_no_SP</fullName>
    <columns>NAME</columns>
    <columns>FS_Zip_Code__c</columns>
    <columns>FS_Market__c</columns>
    <columns>FS_Market_Activation_Date__c</columns>
    <columns>FS_Service_Provider__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FS_Service_Provider__c</field>
        <operation>equals</operation>
    </filters>
    <label>Zips with no SP</label>
</ListView>