force-app/main/default/objects/FS_SP_Aligned_Zip__c/listViews/Zips_with_SP.listView-meta.xml
<ListView>
    <fullName>Zips_with_SP</fullName>
    <columns>NAME</columns>
    <columns>FS_Zip_Code__c</columns>
    <columns>FS_SP_Code__c</columns>
    <columns>FS_Service_Provider__c</columns>
    <columns>Dispenser_Type__c</columns>
    <columns>FS_Selling_Activity_Market__c</columns>
    <columns>FS_Selling_Market_Activation_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>FS_Transit_Days_from_30354__c</columns>
    <columns>FS_Recommended_Branch__c</columns>
    <filterScope>Everything</filterScope>
    <label>Zips with SP</label>
</ListView>